fix: update icon size in buttonsContainer for better visibility in Card component

--- a/src/styles/components/common/Card.module.scss
+++ b/src/styles/components/common/Card.module.scss
@@ -87,8 +87,8 @@
                 flex-direction: column;
                 gap: 30px;
                 svg{
-                    width: 20px;
-                    height: 20px;
+                    width: 25px;
+                    height: 25px;
                 }
                 .quantityContainer{
                     gap: 10px;
